fixed background image not showing up

--- a/styles/Home.css
+++ b/styles/Home.css
@@ -11,7 +11,7 @@
 
 .u-section-1 .u-image-1 {
   min-height: 527px;
-  background-image: url("./images/samantha-gades-BlIhVfXbi9s-unsplash.jpg");
+  background-image: url("../images/samantha-gades-BlIhVfXbi9s-unsplash.jpg");
   background-position: 50% 73.04%;
   height: auto;
   width: 1185px;
