--- a/styles/main.css
+++ b/styles/main.css
@@ -37077,7 +37077,7 @@ a.u-link.u-text-hover-grey-90:hover {
         }
         .u-body
         {
-        background-image: url("./images/alex-haney-70mzv5LbuW8-unsplash1.jpg");
+        background-image: url("../images/alex-haney-70mzv5LbuW8-unsplash1.jpg");
         background-size: cover;
         background-position: 50% 50%;
         background-repeat: no-repeat;
